(Header #8)  Fix tippy warning, title, scrollbar, header position

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -15,8 +15,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
-  font-family: ProximaNova, sans-serif;
 }
 
 html {
@@ -27,7 +25,23 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
-  overflow: hidden;
+  overflow: hidden overlay;
+  font-family: ProximaNova, sans-serif;
+}
+
+html *::-webkit-scrollbar {
+  border-radius: 0;
+  width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(22, 24, 35, 0.06);
+}
+
+html *::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 input,
