--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,10 +1,13 @@
 .wrapper {
   --search-border-radius: 92px;
   --search-height: 46px;
-  --search-width: 361px;
+  --search-width: 415px;
   --search-top-spacer: 9px;
   --search-button-width: 52px;
 
+  position: fixed;
+  top: 0;
+  left: 0;
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
   width: 100%;
   height: var(--default-layout-header-height);
@@ -12,6 +15,7 @@
   justify-content: space-around;
   background: var(--white);
   align-items: center;
+  z-index: 10;
 }
 
 .inner {
@@ -31,6 +35,7 @@
 .logo-container {
   display: flex;
   align-items: center;
+  width: 118px;
 }
 
 .action {
@@ -74,6 +79,7 @@
   left: 16px;
   top: -20%;
   line-height: 2rem;
+  font-family: ProximaNova, sans-serif;
 }
 
 .user-ava {
