--- a/src/components/Layout/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Layout/components/Popper/Menu/Menu.module.scss
@@ -17,6 +17,19 @@
       background-color: rgba(22, 24, 35, 0.03);
     }
   }
+  .language {
+    font-family: SofiaPro, sans-serif;
+    min-height: 40px;
+    color: rgba(22, 24, 35, 1);
+    padding: 10px 24px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2rem;
+
+    &:hover {
+      background: rgba(22, 24, 35, 0.06);
+    }
+  }
 }
 
 // Header
@@ -49,6 +62,11 @@
 
   font-weight: 600;
   line-height: 2.2rem;
+}
+
+.items-container {
+  overflow: hidden auto;
+  max-height: 590px;
 }
 
 .separate {
