--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -16,6 +16,7 @@
     font-weight: 400;
     background-color: transparent;
     caret-color: var(--primary);
+    font-family: ProximaNova, sans-serif;
   }
 
   input:not(:placeholder-shown) ~ .search-btn {
@@ -56,19 +57,6 @@
     list-style-type: none;
     font-weight: 600;
     font-size: 1.4rem;
-  }
-
-  &::-webkit-scrollbar {
-    width: 8px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: var(--white);
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: rgba(22, 24, 35, 0.05);
-    border-radius: 8px;
   }
 }
 
